--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Once the source code of the url is obtained, regular expressions begin to seek o
 
 For mode details, visit http://lab.leocardz.com/facebook-link-preview-php--jquery/
 
-[1]
+![Preview][1]
 
 
 [1]: http://lab.leocardz.com/facebook-link-preview-php--jquery/img/linkPreviewImageTimeLapse.png
